<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StomperCalibActivity" >

	<LinearLayout
		android:id="@+id/chart"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="0dp" 
		android:layout_weight="0.80"/>
	
	<LinearLayout
		android:id="@+id/buttonLayout"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="0.20">
		
		<LinearLayout
			android:id="@+id/senitivityButtonLayout"
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1">
			
		    <TextView
			    android:id="@+id/thresholdText"
			    android:layout_height="0dp"
			    android:layout_weight="0.5"
			    android:layout_width="match_parent"
			    android:text="@string/threshold_default_str"
			    android:textSize="15dp"
		        />
		        	    		
			<Button
			    android:id="@+id/incThresholdButton"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_width="match_parent"
			    android:text="@string/increase_threshold"
			    android:contentDescription="@string/increase_threshold_desc"
			    android:textSize="15dp"
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
						        
			/>
	
		    <Button
		        android:id="@+id/decThresholdButton"
			    android:layout_height="0dp"
			    android:layout_weight="1"
		        android:layout_width="match_parent"
		        android:text="@string/decrease_threshold"
			    android:contentDescription="@string/decrease_threshold_desc"
			    android:textSize="15dp"	   
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"			         
		    />
		    
		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/delayButtonLayout"
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1">
	    		
		    <TextView
			    android:id="@+id/delayText"
			    android:layout_height="0dp"
			    android:layout_weight="0.5"
			    android:layout_width="match_parent"
			    android:text="@string/delay_default_str"
			    android:textSize="15dp"
		        />
		    		    
			<Button
			    android:id="@+id/incDelayButton"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_width="match_parent"
			    android:text="@string/increase_delay"
			    android:contentDescription="@string/increase_delay_desc"
			    android:textSize="15dp"
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"			    
			/>
	
		    <Button
		        android:id="@+id/decDelayButton"
			    android:layout_height="0dp"
			    android:layout_weight="1"
		        android:layout_width="match_parent"
		        android:text="@string/decrease_delay"
			    android:contentDescription="@string/decrase_delay_desc"
			    android:textSize="15dp"	
		        android:layout_marginBottom="5dp"
		        android:layout_marginTop="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
			            
		    />
		    
		</LinearLayout>
				
	    <Button
	        android:id="@+id/okButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/OK_button_text"
	        android:textSize="15dp" 
	        android:layout_marginBottom="5dp"
	        android:layout_marginTop="5dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"

	        />
	    
	</LinearLayout>
</LinearLayout>